initial wip of displaying level ups on the web site

--- a/lawbreaker/web/static/css/lawbreaker.css
+++ b/lawbreaker/web/static/css/lawbreaker.css
@@ -76,3 +76,11 @@ img {
   font-size:2em;
   text-align:center;
 }
+
+.levelup {
+  padding: 0 10px;
+}
+
+.hidden {
+  display : none !important;
+}
