--- a/lawbreaker/web/templates/index.html
+++ b/lawbreaker/web/templates/index.html
@@ -73,17 +73,23 @@
             </div>
 
             <!-- Basic details -->
-            <div class="row">
+            <div class="row status-text">
                 <div class="offset-by-two one columns"><b>Name:</b></div>
                 <div class="two columns">{{content['name']}}</div>
                 <div class="one columns" ><b>XP:&nbsp;&nbsp;</b>
                     <span id="xp">{{content['progression']['1']['xp']}}</span>
                 </div>
-                <div class="two columns center-text">
+                <div class="two columns center-text noprint">
                     <b>Level:</b>
-                     <button id="level_down" class="levelup">-</button>
-                     <span id="level">1</span>
-                     <button id="level_up" class="levelup">+</button>
+                    <select id="level_select">
+                        {% for level in content['progression'].keys()  %}
+                        <option value="{{ level }}">{{ level }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="two columns center-text onlyprint">
+                    <b>Level:</b>
+                    <span id="print_level">1</span>
                 </div>
                 <div class="two columns" ><b>HP:&nbsp;&nbsp;</b>
                     <span id="hit_points">{{content['progression']['1']['hit_points']}} / {{content['progression']['1']['hit_points']}}</span>
