fixed status line

--- a/lawbreaker/web/templates/index.html
+++ b/lawbreaker/web/templates/index.html
@@ -76,8 +76,7 @@
             <div class="row status-text">
                 <div class="offset-by-two one columns"><b>Name:</b></div>
                 <div class="two columns">{{content['name']}}</div>
-                <div class="one columns" ><b>XP:&nbsp;&nbsp;</b>
-                    <span id="xp">{{content['progression']['1']['xp']}}</span>
+                <div class="one columns" ><b>XP:&nbsp;&nbsp;</b><span id="xp">{{content['progression']['1']['xp']}}</span>
                 </div>
                 <div class="two columns center-text noprint">
                     <b>Level:</b>
