--- a/lawbreaker/web/static/css/lawbreaker.css
+++ b/lawbreaker/web/static/css/lawbreaker.css
@@ -90,12 +90,13 @@ img {
   display : none !important;
 }
 
-
 .dropbtn {
     color: black;
     padding: 16px;
     font-size: 1em;
     border: none;
+    font-weight:normal;
+    min-width: 60px
 }
 
 .dropdown {
@@ -106,7 +107,8 @@ img {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #fff;
+    background-color: #ffffff;
+    min-width: 60px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
