--- a/lawbreaker/web/static/css/lawbreaker.css
+++ b/lawbreaker/web/static/css/lawbreaker.css
@@ -89,3 +89,35 @@ img {
 .hidden {
   display : none !important;
 }
+
+
+.dropbtn {
+    color: black;
+    padding: 16px;
+    font-size: 1em;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
