--- a/lawbreaker/web/templates/index.html
+++ b/lawbreaker/web/templates/index.html
@@ -76,15 +76,25 @@
             <div class="row status-text">
                 <div class="offset-by-two one columns"><b>Name:</b></div>
                 <div class="two columns">{{content['name']}}</div>
-                <div class="one columns" ><b>XP:&nbsp;&nbsp;</b><span id="xp">{{content['progression']['1']['xp']}}</span>
+                <div class="one columns"><b>XP:&nbsp;&nbsp;</b><span id="xp">{{content['progression']['1']['xp']}}</span>
                 </div>
                 <div class="two columns center-text noprint">
                     <b>Level:</b>
+                    <!--
                     <select id="level_select">
                         {% for level in content['progression'].keys()  %}
                         <option value="{{ level }}">{{ level }}</option>
                         {% endfor %}
                     </select>
+                    -->
+                    <div class="dropdown">
+                      <button class="dropbtn" id="level">1</button>
+                      <div class="dropdown-content" id="dropdown_item">
+                        {% for level in content['progression'].keys()  %}
+                        <a>{{ level }}</a>
+                        {% endfor %}
+                      </div>
+                    </div>
                 </div>
                 <div class="two columns center-text onlyprint">
                     <b>Level:</b>
