added a ui indicator of the dropdown

--- a/lawbreaker/web/templates/index.html
+++ b/lawbreaker/web/templates/index.html
@@ -87,8 +87,8 @@
                         {% endfor %}
                     </select>
                     -->
-                    <div class="dropdown">
-                      <button class="dropbtn" id="level">1</button>
+                    <div class="dropdown" id="level_dropdown">
+                      <button class="dropbtn" id="level">1 &#x25bc;</button>
                       <div class="dropdown-content" id="dropdown_item">
                         {% for level in content['progression'].keys()  %}
                         <a>{{ level }}</a>
