fixed dropdown focus

--- a/lawbreaker/web/static/css/lawbreaker.css
+++ b/lawbreaker/web/static/css/lawbreaker.css
@@ -120,3 +120,8 @@ img {
 }
 
 .dropdown-content a:hover {background-color: #ddd;}
+
+u {
+  border-bottom: 1px dotted #000;
+  text-decoration: none;
+}
