Fixed media queries for vertical displays

--- a/lawbreaker/web/templates/index.html
+++ b/lawbreaker/web/templates/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <!-- Header -->
             <div class="row noprint header center-text">
-                <div class="offset-by-two two columns">
+                <div class="offset-by-two two columns image hack">
                     <img alt="Konrad I Mazowiecki"
                          src="{{ url_for('static', filename='images/Konrad_I_Mazowiecki.jpg') }}">
                 </div>
